new proj/src/objects/GE_OG_BussTierToFince__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_Buss_Tier_RL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Tier</label>
        <referenceTo>GE_HQ_P_L__c</referenceTo>
        <relationshipLabel>BusinessTierToFinances</relationshipLabel>
        <relationshipName>BusinessTierToFinances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Credit_Lmt__c</fullName>
        <label>Finance Credit Limit</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10001 - $500000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500001 - $1000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1000001 - $5000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5000001 - $1000000000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Ctry_Risk__c</fullName>
        <label>Finance Country Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Risk__c</fullName>
        <label>Finance Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>Less than -1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1.5 to 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 1.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_TC__c</fullName>
        <label>Finance T&amp;C&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>BusinessTierToFinance</label>
    <nameField>
        <label>BusinessTierToFinance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessTierToFinances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>